re PR libgomp/52993 (gomp_init_nest_lock_25: possible bad call to memset)

PR libgomp/52993
	* config/linux/lock.c (gomp_init_nest_lock_25): Fix up last
	argument to memset call.

From-SVN: r188276